--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,9 +1,71 @@
+/* .outerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #1a1a1d;
+} ^^^ original, space edits below*/
+
 .outerContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #1a1a1d;
+}
+
+.stars {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stars .star {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  animation: animate 8s ease-in-out infinite, backgroundmove 16s linear infinite;
+}
+
+.stars .star.star1 {
+  animation-delay: 0s;
+  background: url(../../icons/stars/star1.png);
+}
+.stars .star.star2 {
+  animation-delay: -1s;
+  background: url(../../icons/stars/star2.png);
+}
+.stars .star.star3 {
+  animation-delay: -2s;
+  background: url(../../icons/stars/star3.png);
+}
+.stars .star.star4 {
+  animation-delay: -3s;
+  background: url(../../icons/stars/star4.png);
+}
+.stars .star.star5 {
+  animation-delay: -4s;
+  background: url(../../icons/stars/star5.png);
+}
+.stars .star.star6 {
+  animation-delay: -5s;
+  background: url(../../icons/stars/star6.png);
+}
+.stars .star.star7 {
+  animation-delay: -6s;
+  background: url(../../icons/stars/star7.png);
+}
+.stars .star.star8 {
+  animation-delay: -7s;
+  background: url(../../icons/stars/star8.png);
 }
 
 .container {
@@ -30,5 +92,32 @@
 @media (min-width: 480px) and (max-width: 1200px) {
   .container {
     width: 60%;
+  }
+}
+
+@keyframes animate {
+  0%,
+  20%,
+  40%,
+  60%,
+  80%,
+  100% {
+    opacity: 0;
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90%,
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes backgroundmove {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(2);
   }
 }
