--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -23,6 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(120deg, #3498db, #8e44ad);
 }
 
 .stars .star {
