--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -21,7 +21,7 @@ select:focus {
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #2979ff;
+  background: #6a00ff;
   padding: 20px;
   display: inline-block;
   border: none;
