--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -1,8 +1,11 @@
 html,
 body {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  background-image: linear-gradient(120deg, #3498db, #8e44ad);
 }
 
 #root {
@@ -11,6 +14,7 @@ body {
 
 * {
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 .joinOuterContainer {
@@ -23,27 +27,65 @@ body {
 }
 
 .joinInnerContainer {
-  width: 20%;
+  width: 25%;
+  margin: 10px;
+  background: #f1f1f1;
+  padding: 40px 50px;
+  border-radius: 10px;
+  position: absolute;
 }
+
+.txtInput {
+  border-bottom: 2px solid #6900fc;
+}
+.txtInput input {
+  font-size: 15px;
+  color: #333;
+  border: none;
+  width: 100%;
+  outline: none;
+  background: none;
+  padding: 0 5px;
+  height: 40px;
+}
+
+/* .txtInput span::before {
+  content: attr(placeholder);
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  z-index: -1;
+  transition: 0.5s;
+}
+.txtInput span::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(120deg, #3498db, #8e44ad);
+} */
 
 .joinInput {
   border-radius: 0;
   padding: 15px 20px;
   width: 100%;
+  /* text-align: center; */
 }
 
 .heading {
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 2.5em;
   padding-bottom: 10px;
-  border-bottom: 2px solid white;
 }
 
 .button {
+  font-size: 1rem;
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #2979ff;
+  background: linear-gradient(120deg, #3498db, #8e44ad);
   padding: 20px;
   border-radius: 5px;
   display: inline-block;
