--- a/client/src/components/TextContainer/TextContainer.css
+++ b/client/src/components/TextContainer/TextContainer.css
@@ -5,6 +5,7 @@
   color: white;
   height: 60%;
   justify-content: space-between;
+  text-shadow: 0 0 10px rgb(0, 0, 0);
 }
 
 .activeContainer {
@@ -23,8 +24,9 @@
 }
 
 .textContainer h1 {
+  color: #000000;
   margin-bottom: 0px;
-  text-shadow: 0 0 25px #6a00ff;
+  text-shadow: 0 0 20px linear-gradient(120deg, #3498db, #8e44ad);
 }
 
 @media (min-width: 320px) and (max-width: 1200px) {
